[package]
name = "tmp-postgrust"
version = "0.6.1"
authors = ["John Children <john.children@cambridgequantum.com>"]
license = "MIT"
edition = "2018"
description = "Temporary postgresql instances for testing"
repository = "https://github.com/CQCL/tmp-postgrust"
readme = "README.md"
keywords = ["testing", "database", "postgres"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
glob = "0.3"
nix = "0.26"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.8", features = ["parking_lot", "rt", "sync", "io-util", "process", "macros", "fs"], default-features = false, optional = true }
tracing = "0.1"
which = "4.0"
once_cell = "1"
reflink-copy = "0.1"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1.8", features = ["parking_lot", "rt", "rt-multi-thread", "sync", "io-util", "process", "macros", "fs"], default-features = false }
tokio-postgres = "0.7"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
default = []
tokio-process = ["tokio"]
